[-] * Fix handling of caller group in Python bindings (bug #870).
[-] * Correctly detect empty entries from Motorola.
[-] * Better error reporting from at-charset test.
[+] * smsd-inject now shows ID of injected message.
[-] * Fix decoding of date in Nokia phonebooks (bug #876).
[-] * Fix detection of SMS message memories in AT (bug #875).
[-] * Improve documentation for savefile (bug #893).
    
20090415 - 1.24.0

[-] * Better detect Bluetooth ports on Samsung (bug #862).
[-] * Ignore security errors on AT init (needed for Huawei).
    
20090330 - 1.23.92

[-] * LUID reading requires IrMC profile.
[-] * Locations for GlobeTrotter 3G+ start at 0 (bug #847).
[-] * More verbose logging of delivery reports (bug #824).
[-] * Increase default DeliveryReportDelay (bug #824).
[-] * Fixed handling of SMS locations (bug #853).
    
20090318 - 1.23.91

[+] * PostgreSQL backend now supports IDs for RunOnReceive.
[+] * RunOnReceive is started through shell not directly.
[-] * Fixed reading of empty phonebook entries from Samsung (bug #809).
[-] * Reread messages if CMGL shows them corrupted (bug #691).
[+] * Added support for vNote files.
[-] * Properly detect Nokia 6220 Classic (bug #840).
[-] * Fix writing of phonebook on Motorola V8 (bug #827).
[-] * Detect daemon on FreeBSD.
[-] * Ignore charset errors on AT init as some phones might need PIN.
[-] * Optionally use MT for phone phonebook for AT phones.
[+] * Added support for quick dial numbers on AT phones.
    
20090311 - 1.23.90

[-] * Fixed decoding of Samsung memory entries.
[-] * Properly handle corrupted messages from Nokia phones (bug #811).
[-] * Fix parsing of calls from Alcatel C701 (bug #831).
[-] * Fixed handling of error states with -len and -autolen parameters.
[-] * Fixed possible crash in DBI engine.
[+] * PostgreSQL engine properly uses sequences instead of reinventing.
[+] * MySQL engine properly uses auto increments instead of reinventing.
[-] * Fix escaping of field name in PostgreSQL engine.