@@ -21,12 +21,23 @@ if (NOT LIBDBI_FOUND)
        /usr/local/lib
     )
 
+
     if(LIBDBI_INCLUDE_DIR AND LIBDBI_LIBRARIES)
-       set(LIBDBI_FOUND TRUE CACHE INTERNAL "libdbi found")
-       message(STATUS "Found libdbi: ${LIBDBI_INCLUDE_DIR}, ${LIBDBI_LIBRARIES}")
+        check_symbol_exists (DBI_INTEGER_SIZEMASK "${LIBDBI_INCLUDE_DIR}/dbi/dbi.h" HAVE_DBI_INTEGER_SIZEMASK)
+        if (HAVE_DBI_INTEGER_SIZEMASK)
+            message(STATUS "Found libdbi: ${LIBDBI_INCLUDE_DIR}, ${LIBDBI_LIBRARIES}")
+            set(LIBDBI_FOUND TRUE CACHE INTERNAL "libdbi found")
+        else (HAVE_DBI_INTEGER_SIZEMASK)
+            message(STATUS "Found libdbi, but it is too old!")
+            set(LIBDBI_FOUND FALSE CACHE INTERNAL "libdbi found")
+            unset (LIBDBI_INCLUDE_DIR)
+            unset (LIBDBI_LIBRARIES)
+            unset (LIBDBI_INCLUDE_DIR CACHE)
+            unset (LIBDBI_LIBRARIES CACHE)
+        endif (HAVE_DBI_INTEGER_SIZEMASK)
     else(LIBDBI_INCLUDE_DIR AND LIBDBI_LIBRARIES)
-       set(LIBDBI_FOUND FALSE CACHE INTERNAL "libdbi found")
-       message(STATUS "libdbi not found.")
+        set(LIBDBI_FOUND FALSE CACHE INTERNAL "libdbi found")
+        message(STATUS "libdbi not found.")
     endif(LIBDBI_INCLUDE_DIR AND LIBDBI_LIBRARIES)
 
     mark_as_advanced(LIBDBI_INCLUDE_DIR LIBDBI_LIBRARIES)
