@@ -28,6 +28,7 @@ ChangeLog
 [-] * Fix decoding of date in Nokia phonebooks (bug #876).
 [-] * Fix detection of SMS message memories in AT (bug #875).
 [-] * Improve documentation for savefile (bug #893).
+[-] * Add stricter check for DBI version (bug #894).
     
 20090415 - 1.24.0
 
